1)Dataset splitted into strings and numbers 2) Reimported the Data based on Columns of numbers and Strings

--- a/A-Loan-Data-NumPy.ipynb
+++ b/A-Loan-Data-NumPy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,14 +67,14 @@
        "       [66055249.  ,         nan,    10000.  , ...,         nan,         nan,      301.9 ]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "raw_data_np = np.genfromtxt(\"loan-data.csv\", delimiter=';', encoding='latin1')\n",
-    "raw_data_np"
+    "raw_data_np\n"
    ]
   },
   {
@@ -79,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -90,7 +97,7 @@
        "88019"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,26 +108,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/kf/n56cn97x5fn523_123jtsv_40000gn/T/ipykernel_6782/2126432448.py:2: RuntimeWarning: Mean of empty slice\n",
+      "/var/folders/kf/n56cn97x5fn523_123jtsv_40000gn/T/ipykernel_54826/2126432448.py:2: RuntimeWarning: Mean of empty slice\n",
       "  temp_mean= np.nanmean(raw_data_np,axis=0) # Fill with the mean, axis=0 column-wise\n"
      ]
     }
    ],
    "source": [
-    "temp_fill= np.nanmax(raw_data_np)+1     # Fill with a value larger than the max\n",
+    "temp_fill= np.nanmax(raw_data_np)+1     # Fill with a value larger than the max ---> produce a scalar value across rows and column ---> axis decide it will scalar or vector\n",
     "temp_mean= np.nanmean(raw_data_np,axis=0) # Fill with the mean, axis=0 column-wise\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68616520.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_fill"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -130,18 +157,37 @@
        "            440.92,         nan,         nan,         nan,         nan,         nan,     3143.85])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp_mean"
+    "temp_mean # shows the mean of each column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10001, 14)\n",
+      "nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(raw_data_np.shape)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -150,37 +196,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/kf/n56cn97x5fn523_123jtsv_40000gn/T/ipykernel_6782/3942575298.py:1: RuntimeWarning: All-NaN slice encountered\n",
+      "/var/folders/kf/n56cn97x5fn523_123jtsv_40000gn/T/ipykernel_54826/203471530.py:1: RuntimeWarning: All-NaN slice encountered\n",
       "  temp_stat= np.array([np.nanmin(raw_data_np,axis=0),\n",
-      "/var/folders/kf/n56cn97x5fn523_123jtsv_40000gn/T/ipykernel_6782/3942575298.py:2: RuntimeWarning: All-NaN slice encountered\n",
+      "/var/folders/kf/n56cn97x5fn523_123jtsv_40000gn/T/ipykernel_54826/203471530.py:2: RuntimeWarning: All-NaN slice encountered\n",
       "  temp_mean,np.nanmax(raw_data_np,axis=0)])\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[  373332.  ,         nan,     1000.  ,         nan,     1000.  ,         nan,        6.  ,\n",
-       "              31.42,         nan,         nan,         nan,         nan,         nan,        0.  ],\n",
-       "       [54015809.19,         nan,    15273.46,         nan,    15311.04,         nan,       16.62,\n",
-       "             440.92,         nan,         nan,         nan,         nan,         nan,     3143.85],\n",
-       "       [68616519.  ,         nan,    35000.  ,         nan,    35000.  ,         nan,       28.99,\n",
-       "            1372.97,         nan,         nan,         nan,         nan,         nan,    41913.62]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "temp_stat= np.array([np.nanmin(raw_data_np,axis=0),\n",
-    "                    temp_mean,np.nanmax(raw_data_np,axis=0)])\n",
-    "temp_stat     "
+    "                    temp_mean,np.nanmax(raw_data_np,axis=0)])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +230,7 @@
     }
    ],
    "source": [
-    "temp_stat"
+    "temp_stat # 3 arrays -> min,mean,max"
    ]
   },
   {
@@ -219,7 +249,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[54015809.19         nan    15273.46         nan    15311.04         nan       16.62      440.92\n",
+      "         nan         nan         nan         nan         nan     3143.85]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_mean\n",
+    "print(temp_mean)\n",
+    "np.isnan(temp_mean).sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> From temp_mean, we can see there <nan.isnan we can see there are 8 columns, with complete None values>\n",
+    "> Columns string represents the column no. of nan values\n",
+    "\n",
+    "> columns numeric -> each columns most of the values as numeric\n",
+    "> whereas, columns string -> no numeric values are present all are strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -228,16 +299,35 @@
        "array([ 1,  3,  5,  8,  9, 10, 11, 12])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "columns_strings= np.argwhere(np.isnan(temp_mean)).squeeze()\n",
-    "# columns string will return the indexes of nan\n",
-    "columns_strings\n",
-    "\n"
+    "columns_strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  2,  4,  6,  7, 13])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns_numeric = np.argwhere(np.isnan(temp_mean)==False).squeeze()\n",
+    "columns_numeric"
    ]
   },
   {
@@ -249,7 +339,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "> autostrip removes the trailing space of each string in the data\n",
+    "> dtype = data type value of each element in the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {
     "scrolled": true
    },
@@ -273,23 +373,24 @@
        "      dtype='<U69')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "load_data_strings= np.genfromtxt(\"loan-data.csv\", delimiter=';', encoding='latin1',\n",
+    "loan_data_strings= np.genfromtxt(\"loan-data.csv\", delimiter=';', encoding='latin1',\n",
     "                                skip_header=1,\n",
     "                                autostrip=True,\n",
     "                                usecols=columns_strings,\n",
     "                                dtype=str)\n",
-    "load_data_strings"
+    "loan_data_strings\n",
+    "# loan_data_strings only contains the values which are contain nan values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -304,25 +405,41 @@
        "       [66055249.  ,    10000.  ,    10000.  , 68616520.  ,      309.97,      301.9 ]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Define columns_numeric by excluding columns_strings from the total column indices\n",
-    "total_columns = np.arange(raw_data_np.shape[1])  # Assuming raw_data_np has all columns\n",
-    "columns_numeric = np.setdiff1d(total_columns, columns_strings)\n",
-    "\n",
-    "# Load numeric data\n",
-    "load_data_numeric = np.genfromtxt(\"loan-data.csv\", delimiter=';', encoding='latin1',\n",
+    "# temp_fill was the max value\n",
+    "loan_data_numeric = np.genfromtxt(\"loan-data.csv\", delimiter=';', encoding='latin1',\n",
     "                                  skip_header=1,\n",
     "                                  autostrip=True,\n",
     "                                  usecols=columns_numeric,\n",
     "                                  filling_values=temp_fill)\n",
-    "load_data_numeric\n",
-    "\n",
-    "\n"
+    "loan_data_numeric\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# loan_data_numeric doesn't contain any nan values now\n",
+    "np.isnan(loan_data_numeric).sum()"
    ]
   },
   {
@@ -341,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +469,7 @@
        "       'total_pymnt'], dtype='<U19')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,22 +478,21 @@
     "header_full = np.genfromtxt(\"loan-data.csv\", delimiter=';', encoding='latin1',autostrip=True,\n",
     "                                max_rows=1,\n",
     "                                dtype=str)\n",
-    "header_full\n",
-    "         "
+    "header_full"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "header_strings, head_numeric = header_full[columns_strings], header_full[columns_numeric]\n"
+    "header_strings, header_numeric = header_full[columns_strings], header_full[columns_numeric]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +502,7 @@
        "       'addr_state'], dtype='<U19')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -406,13 +522,13 @@
        "array(['id', 'loan_amnt', 'funded_amnt', 'int_rate', 'installment', 'total_pymnt'], dtype='<U19')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "head_numeric\n"
+    "header_numeric\n"
    ]
   },
   {
